fix sass on mobile

--- a/source/scss/_article.scss
+++ b/source/scss/_article.scss
@@ -98,7 +98,7 @@ article {
     }
   }
   pre {
-    @include respond-to(0, 700px) {
+    @include respond-to(700px) {
       margin-left: -12.5%;
       width: 125%;
     }
@@ -179,7 +179,7 @@ article {
       background-position:  90% center;
       background-repeat: no-repeat;
       text-align: right;
-      @include respond-to(0, 560px) {
+      @include respond-to(560px) {
         background-position: 100% center;
         border-top: 1px solid rgba(0,0,0,0.2);
         margin-top: -1px;
@@ -189,7 +189,7 @@ article {
           @include transform(translate3d(20px, 0, 0))
         }
         background-position: 92% center;
-        @include respond-to(0, 560px) {
+        @include respond-to(560px) {
           background-position: 100% center;
         }
       }
@@ -200,7 +200,7 @@ article {
       background-position:  10% center;
       background-repeat: no-repeat;
       text-align: left;
-      @include respond-to(0, 560px) {
+      @include respond-to(560px) {
         background-position: left center;
       }
       &:hover {
@@ -208,13 +208,13 @@ article {
           @include transform(translate3d(-20px, 0, 0))
         }
         background-position:  8% center;
-        @include respond-to(0, 560px) {
+        @include respond-to(560px) {
           background-position: left center;
         }
       }
     }
     &.next, &.previous {
-      @include respond-to(0, 560px) {
+      @include respond-to(560px) {
         width: 100%;
         padding-top: 0.5em;
         padding-bottom: 0.5em;
@@ -222,7 +222,7 @@ article {
     }
   }
   .constrain {
-    @include respond-to(0, 700px) {
+    @include respond-to(700px) {
       padding: 0;
       width: 100%;
     }
@@ -232,7 +232,7 @@ article {
 
 // Responsive Styles
 .content {
-  @include respond-to(0, 700px) {
+  @include respond-to(700px) {
     font-size: 1rem;
   }
 }
